# web

./: CMakeLists.txt  README  build.sh  buildAll.bat  ciconfig.yml  help_check.sh  nodejs_check.sh  package.json  start.sh  watch-client.bat  watch-server-g3x-5.0.bat  watch-server-g4x-5.0.bat  webgui.service  webpack.client.dev.js  webpack.client.prod.js  webpack.server.prod.js
client/: index.html
client/conf/: chassis_config.js  helpstring.json  language.json  treeConfig.json  uppercase_key.js
client/css/about/: about.css
client/css/chassis/: chassis_view.css
client/css/common/: common.css  counters.css  loading-modal.css
client/css/dashboard/: dashboard.css  menufont.css
client/css/edit_select/: editable-select.css
client/css/grid/: grid.css
client/css/layout/: main.css  react_layout.css  reset.css  sidebar.css  statusbar.css  testview.css
client/css/login/: loginpage.css
client/css/modal/: modal.css
client/css/pmfigure/: pmfigure.css
client/css/progress/: react-progress.css
client/font/: iconfont.css  iconfont.eot
client/jsx/: index.jsx  requestConfig.js  tableConfig.js  urlEvent.js  yangMapping.js  yang_user_define.js
config/: menu-G30-R5.0.json  menu-G40-R5.0.json  message.json  server.conf  yang-G30-R5.0.json  yang-G40-R5.0.json
control/: postinst  prerm
server/: CryptoUtil.js  netconfApp.js  serverApp.js
server/cache/: cacheFilter.json  cachedata.js  cachefile.js  cachemanager.js  datahandler.js  facilityTree.json
server/common/: config.js  logger.js  netconf.js  tools.js
server/ssh2_mod/: client.js
(+124 files in other folders)
