project(webgui)

set(WEBGUI_BIN_DIR ${CMAKE_CURRENT_BINARY_DIR})
set(WEBGUI_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set(WEBGUI_INSTALL_DIR ${INSTALL_THANOS_PREFIX_PATH}/www)

if (ARCH STREQUAL "arm64")
    set(WEBGUI_ARCH arm64)
else()
    set(WEBGUI_ARCH x64)
endif()

execute_process(COMMAND sh ${WEBGUI_SRC_DIR}/nodejs_check.sh ${WEBGUI_BIN_DIR} ${WEBGUI_ARCH} ${ARTIFACTORY_HOSTNAME})
execute_process(COMMAND sh ${WEBGUI_SRC_DIR}/help_check.sh ${WEBGUI_BIN_DIR} ${ARTIFACTORY_HOSTNAME} ${FRU_NAME})

install(DIRECTORY ${WEBGUI_SRC_DIR}/release/bin COMPONENT webgui DESTINATION ${WEBGUI_INSTALL_DIR})
install(DIRECTORY ${WEBGUI_SRC_DIR}/release/static COMPONENT webgui DESTINATION ${WEBGUI_INSTALL_DIR})
install(DIRECTORY ${WEBGUI_SRC_DIR}/release/config COMPONENT webgui DESTINATION ${WEBGUI_INSTALL_DIR})
install(DIRECTORY ${WEBGUI_BIN_DIR}/nodejs COMPONENT webgui DESTINATION ${WEBGUI_INSTALL_DIR} PATTERN "bin/*" PERMISSIONS OWNER_EXECUTE OWNER_READ OWNER_WRITE)
if (FRU_NAME STREQUAL "frcu31")
else()
	install(DIRECTORY ${WEBGUI_BIN_DIR}/documentation COMPONENT webgui DESTINATION ${WEBGUI_INSTALL_DIR})
endif()
install(DIRECTORY ${WEBGUI_BIN_DIR}/webgui_help COMPONENT webgui DESTINATION ${WEBGUI_INSTALL_DIR})
install(PROGRAMS ${WEBGUI_SRC_DIR}/start.sh COMPONENT webgui DESTINATION ${WEBGUI_INSTALL_DIR})
install(FILES ${WEBGUI_SRC_DIR}/webgui.service COMPONENT webgui DESTINATION /etc/systemd/system/)

create_package(webgui "WebGUI Server" ${WEBGUI_SRC_DIR})